# nearby

./: .gitignore  Cargo.toml
.planning/: REQUIREMENTS.md  ROADMAP.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md
.planning/research/: ARCHITECTURE.md  COMPARISON.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: example.toml
src/: config.rs  idle.rs  login_manager.rs  main.rs
src/commands/: mod.rs
src/setup/: discovery.rs  mod.rs
