[package]
name = "nearby"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
bluer = { version = "0.17.4", features = ["full"] }
clap = { version = "4.5.30", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.10"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.32"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
inquire = "0.9.4"
tokio = { version = "1.52.1", features = ["full"] }
zbus = "5.14.0"
zbus_systemd = { version = "0.26000.0", features = ["login1"] }
